--- a/style.css
+++ b/style.css
@@ -13,14 +13,39 @@ header {
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
+    
     position: relative;
+    height: 100vh;
 
 }
 #menu{
     color: #fff;
-    background-color: #000001fc;
+    background: linear-gradient(0deg, #0a0e0e,  #0F1010);
+    margin-top: 36px;
 }
 
+.link__item{
+    text-decoration: none;
+    font-family: "LEMONMILK-Light";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 3.7142856px;
+    color: #fff;
+}
+
+.link__item:hover{
+    color: #dab777;
+}
+
+#box{
+  height: 100%;
+}
+
+.first__element{
+    border: 1px solid #dab777;
+    padding: auto;
+}
 
 /*#romb {
     width: 0;
