--- a/style.css
+++ b/style.css
@@ -9,18 +9,43 @@ header {
 
 #page {
     
-    background-image: url('slike/bg1.png');
+    background-image: url('images/bg1.png');
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
+    
     position: relative;
+    height: 100vh;
 
 }
 #menu{
     color: #fff;
-    background-color: #000001fc;
+    background: linear-gradient(0deg, #0a0e0e,  #0F1010);
+    margin-top: 36px;
 }
 
+.link__item{
+    text-decoration: none;
+    font-family: "LEMONMILK-Light";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 3.7142856px;
+    color: #fff;
+}
+
+.link__item:hover{
+    color: #dab777;
+}
+
+#box{
+  height: 100%;
+}
+
+.first__element{
+    border: 1px solid #dab777;
+    padding: auto;
+}
 
 /*#romb {
     width: 0;
@@ -44,26 +69,26 @@ header {
 
 
 #bg2{
-    background-image: url('slike/bg 2.png');
+    background-image: url('images/bg 2.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 #bg3{
-    background-image: url('slike/bg 3.png');
+    background-image: url('images/bg 3.png');
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover; 
 }
 #bg4{
-    background-image: url('slike/bg4.png');
+    background-image: url('images/bg4.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;  
 }
 
 #contact{
-    background-image: url('slike/contact bg.png');
+    background-image: url('images/contact bg.png');
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover; 
